--- a/server/package.json
+++ b/server/package.json
@@ -4,17 +4,19 @@
   "scripts": {
     "dev": "npx nodemon",
     "test": "jest",
-    "build": "rimraf ./build && tsc", 
+    "build": "rimraf ./build && tsc",
     "start": "npm run build && node build/index.js"
   },
   "dependencies": {
     "http": "^0.0.1-security",
-    "socket.io": "^4.5.4"
+    "socket.io": "^4.5.4",
+    "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
-    "jest": "^29.3.1",
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
     "nodemon": "^2.0.22",
     "rimraf": "^5.0.0",
     "ts-node": "^10.9.1",
